# TG-game-mod-wcproject

./: README.md
Something/jp_AndroidManifest/: AndroidManifest.xml
Something/tw_AndroidManifest/: AndroidManifest.xml
TG-game-mod/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
TG-game-mod/app/: build.gradle
TG-game-mod/app/src/main/: AndroidManifest.xml
TG-game-mod/app/src/main/cpp/: CMakeLists.txt  Main.cpp
TG-game-mod/app/src/main/cpp/Const/: Const_Assembly.h  Const_Field.h  Const_General.h  Const_Il2cpp.h  Const_Klass.h  Const_Method.h  Const_NameSpaze.h
TG-game-mod/app/src/main/cpp/Const/v7/: Const_General.cpp  Const_Il2cpp.cpp  Const_NameSpaze.cpp
TG-game-mod/app/src/main/cpp/Const/v8/: Const_Assembly.cpp  Const_Field.cpp  Const_General.cpp  Const_Klass.cpp  Const_Method.cpp
TG-game-mod/app/src/main/cpp/Hook/: HookEntry.cpp  HookEntry.h  HookFuncs.cpp  HookFuncs.h
TG-game-mod/app/src/main/cpp/Hook/Data/: AppInfo.cpp  AppInfo.h  Config.cpp  Config.h  DefInterface.h  Defs.cpp  Defs.h  GameInfo.h  Parameters.h
TG-game-mod/app/src/main/cpp/Il2cpp/: il2cpp-api-functions.h  il2cpp-appdata.h  il2cpp-init.cpp  il2cpp-init.h  il2cpp-types.h
TG-game-mod/app/src/main/cpp/Il2cpp/Il2cppApi/: Array.hpp  Field.hpp  Helper.hpp  List.hpp  String.hpp  Types.h  Utils.hpp
TG-game-mod/app/src/main/cpp/Includes/: Logger.h  Utils.cpp  Utils.h  base64.hpp  obfuscate.hpp
TG-game-mod/app/src/main/cpp/JNI/: AccountManager.cpp  AccountManager.h  JNIEntry.cpp  MApplication.cpp  MApplication.h  Menu.cpp  Menu.h  NativeToast.cpp  NativeToast.h  Preferences.cpp  Preferences.h
TG-game-mod/app/src/main/cpp/JNI/Data/: Path.h  Sounds.h
TG-game-mod/app/src/main/cpp/JNI/Expand/: AccountHandler.cpp  AccountHandler.h  MethodManager.cpp  MethodManager.h  Utils.hpp
TG-game-mod/app/src/main/java/jp/colopl/wcat/: ColoplApplication.java
TG-game-mod/app/src/main/java/tg/ck/: MApplication.java  NativeLoader.java  NativeToast.java  Utils.java
TG-game-mod/app/src/main/java/tg/ck/loadlib/: LoadLib.java
TG-game-mod/app/src/main/java/tg/ck/menu/: FloatingModMenuService.java  MainActivity.java  Preferences.java  Sounds.java  StaticActivity.java
TG-game-mod/app/src/main/java/tg/ck/menu/account/: AccountAdapter.java  AccountManager.java  AccountViewData.java
TG-game-mod/app/src/main/java/tg/ck/reflection/: ByPass.java  ReflectionUtils.java
TG-game-mod/app/src/main/java/tg/ck/tinker/: ShareReflectUtil.java  ShareTinkerLog.java  TinkerLoadLibrary.java
TG-game-mod/app/src/main/java/tw/sonet/wcp/: ColoplApplication.java
TG-game-mod/app/src/main/res/layout/: activity_main.xml
TG-game-mod/app/src/main/res/values/: strings.xml
TG-game-mod/gradle/wrapper/: gradle-wrapper.properties
